[gd_scene load_steps=30 format=3 uid="uid://bfbr7k2y4fs40"]

[ext_resource type="Script" path="res://Assets/Scenes/CharacterBody2D.gd" id="1_qeph5"]
[ext_resource type="Texture2D" uid="uid://d1l7gpalk64bs" path="res://Assets/Sprites/Characters/PlayerAnimations/BigFireBoiSheetIdle.png" id="3_46xt0"]
[ext_resource type="Texture2D" uid="uid://k0sjgny1lmke" path="res://Assets/Sprites/Characters/PlayerAnimations/AnimationsBigBoi-Walk2.png" id="3_rryxb"]
[ext_resource type="Texture2D" uid="uid://ci86smgk2lxbi" path="res://Assets/Sprites/Characters/PlayerAnimations/SmallFireBoiIdle.png" id="5_722p4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0w0vx"]
size = Vector2(28, 47)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_as363"]
size = Vector2(10, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_otkpu"]
atlas = ExtResource("3_46xt0")
region = Rect2(0, 0, 38, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_dosvl"]
atlas = ExtResource("3_46xt0")
region = Rect2(38, 0, 38, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_kp3gu"]
atlas = ExtResource("3_46xt0")
region = Rect2(76, 0, 38, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_emu64"]
atlas = ExtResource("3_46xt0")
region = Rect2(114, 0, 38, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_acv2x"]
atlas = ExtResource("3_46xt0")
region = Rect2(152, 0, 38, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7ac3"]
atlas = ExtResource("3_rryxb")
region = Rect2(0, 0, 56, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpkbn"]
atlas = ExtResource("3_rryxb")
region = Rect2(0, 55, 56, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jfto"]
atlas = ExtResource("3_rryxb")
region = Rect2(0, 110, 56, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4ypb"]
atlas = ExtResource("3_rryxb")
region = Rect2(0, 165, 56, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_ht41j"]
atlas = ExtResource("3_rryxb")
region = Rect2(0, 220, 56, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxl37"]
atlas = ExtResource("3_rryxb")
region = Rect2(0, 275, 56, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ubey"]
atlas = ExtResource("3_rryxb")
region = Rect2(0, 330, 56, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_svtmt"]
atlas = ExtResource("3_rryxb")
region = Rect2(0, 385, 56, 55)

[sub_resource type="SpriteFrames" id="SpriteFrames_eo2u2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_otkpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dosvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kp3gu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emu64")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acv2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otkpu")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7ac3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpkbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jfto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4ypb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ht41j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxl37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ubey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svtmt")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_4cb0d"]
atlas = ExtResource("5_722p4")
region = Rect2(0, 0, 14, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbx3r"]
atlas = ExtResource("5_722p4")
region = Rect2(18, 0, 14, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpe2b"]
atlas = ExtResource("5_722p4")
region = Rect2(36, 0, 14, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yf2o"]
atlas = ExtResource("5_722p4")
region = Rect2(54, 0, 14, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmmqo"]
atlas = ExtResource("5_722p4")
region = Rect2(72, 0, 14, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdbei"]
atlas = ExtResource("5_722p4")
region = Rect2(90, 0, 14, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_dlm6x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cb0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbx3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpe2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yf2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmmqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdbei")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_fitdh"]
offsets = PackedFloat32Array(0, 0.720779)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rnnon"]
gradient = SubResource("Gradient_fitdh")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
position = Vector2(600, 300)
script = ExtResource("1_qeph5")

[node name="BigCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, 8.5)
shape = SubResource("RectangleShape2D_0w0vx")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="SmallCollider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 24.5)
shape = SubResource("RectangleShape2D_as363")

[node name="BigAnimatedSprite" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(0, 7)
sprite_frames = SubResource("SpriteFrames_eo2u2")
animation = &"Idle"
autoplay = "Idle"
speed_scale = 2.0

[node name="SmallAnimatedSprite" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(0, 19)
sprite_frames = SubResource("SpriteFrames_dlm6x")
animation = &"Idle"
autoplay = "Idle"
frame_progress = 0.956607

[node name="BigLights" type="Node2D" parent="."]

[node name="PointLight2D2" type="PointLight2D" parent="BigLights"]
position = Vector2(0, 12)
energy = 0.5
range_layer_min = -5
range_layer_max = 5
texture = SubResource("GradientTexture2D_rnnon")
texture_scale = 2.0

[node name="PointLight2D" type="PointLight2D" parent="BigLights"]
position = Vector2(0, 2)
energy = 0.5
range_layer_min = -5
range_layer_max = 5
shadow_enabled = true
texture = SubResource("GradientTexture2D_rnnon")
texture_scale = 2.0

[node name="SmallLights" type="Node2D" parent="."]
visible = false
position = Vector2(0, 25)

[node name="PointLight2D" type="PointLight2D" parent="SmallLights"]
energy = 0.5
range_layer_min = -5
range_layer_max = 5
shadow_enabled = true
texture = SubResource("GradientTexture2D_rnnon")
texture_scale = 4.5

[node name="PointLight2D2" type="PointLight2D" parent="SmallLights"]
energy = 0.5
range_layer_min = -5
range_layer_max = 5
texture = SubResource("GradientTexture2D_rnnon")
texture_scale = 4.5
